# pull-push-pipeline

./: .gitignore  README.md  pyproject.toml
API.docs/: ACES.postman_collection.json
config/compose/: .env  docker-compose.yaml
config/k8s/cratedb/: cratedb.yaml  pv.yaml
config/k8s/jupyter/: install.sh  pv.yaml  values.yaml
config/k8s/kafka/: deployment.yaml  values.yaml
config/k8s/ql/: ql.yaml
config/mongo/: .bash_history  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--8723456122644395047.wt  collection-0-4753982888602434036.wt  collection-2--8723456122644395047.wt  collection-4--8723456122644395047.wt  index-1--8723456122644395047.wt  index-1-4753982888602434036.wt  index-3--8723456122644395047.wt  index-3-4753982888602434036.wt  index-5--8723456122644395047.wt  index-6--8723456122644395047.wt  sizeStorer.wt
docs/k8s-metrics/: prometheus.md
docs/kafka/: conf.md
docs/prefect/: configuration.md  deploy_flows.md
k8s_publisher/: test.py
k8s_publisher/config/: prometheus-setup.sh
k8s_publisher/prometheus_client/: client.py  k8s_metrics.py
scripts/: Untitled.ipynb  block.py  child-deployment.yaml  fetch_metrics_subset-deployment.yaml  prometheus_simple-deployment.yaml
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  prod-checkpoint.py
scripts/flows/: fetch_metrics_tiny_set.py  p.py  simple_prometheus.py
src/: create_subscription.py  prefect.yaml  settings.py
src/deployments/: deployment-child.yaml
src/fiware/: context_broker.py  http.py
src/flows/: block.py  create_subscription.py  requirements.txt  settings.py
(+29 files in other folders)
