[tool.poetry]
name = "aces-perception"
version = "0.1.0"
description = ""
authors = ["kapsali29 <kapsali29@gmail.com>"]
readme = "README.md"
packages = [{include = "aces"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

